# No_Bot_Quadrant

./: .env.example  .gitignore  Makefile  README.md  TECH_STACK.md  docker-compose.yml  project-summary.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/impact_analysis/: config.py  main.py
backend/src/impact_analysis/api/: routes_analyze.py  routes_ask.py  routes_chunks.py  routes_graph.py  routes_ingest.py
backend/src/impact_analysis/models/: chunk.py
backend/src/impact_analysis/services/: embedding_client.py  ingestion_orchestrator.py  neo4j_client.py  qdrant_client.py  repo_cloner.py
backend/src/impact_analysis/utils/: batching.py  hashing.py  language_detect.py  token_utils.py
demo/: run_demo.py
demo/sample_repo/: main.py
demo/sample_repo/tests/: test_main.py
demo/sample_repo/utils/: helper.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AskPanel.tsx  DiffAnalyzeForm.tsx  FullGraph.tsx  GraphView.tsx  LoadingSpinner.tsx  RepoIngestForm.tsx
infra/neo4j/: apoc.conf  neo4j.conf
infra/qdrant/: config.yaml
scripts/: example_diff.sh  init_demo.sh  run_ingest.sh
